# python-web-hw13

./: README.md  docker-compose.yml  main.py  pyproject.toml
migrations/versions/: 076f2e3b366e_init.py  92af168b3a36_init.py  cda2dabdbe83_init.py
src/: schemas.py
src/conf/: config.py
src/database/: connect_db.py  create_all.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  tokens.py  users.py
src/services/: auth.py  email.py
src/services/templates/: password_reset_email.html  verification_email.html
src/utils/: seed.py
