[tool.poetry]
name = "python-web-hw13"
version = "0.1.0"
description = ""
authors = ["FTKV <mthkvv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.8"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
redis = "4.6.0"
fastapi = "^0.104.1"
fastapi-limiter = "^0.1.5"
fastapi-mail = "^1.4.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic-settings = "^2.1.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
aiohttp = "^3.8.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
libgravatar = "^1.0.4"
cloudinary = "^1.36.0"
faker = "^19.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
